syntax = "proto3";

option go_package = "github.com/ryanbyrne30/what-the-bill/monitor/proto_queue";

package proto_queue;

service Queue {
    rpc PostUSBillUpdatedEvent(USBillUpdatedEvent) returns (EventPosted) {}
    rpc PostUSBillCreatedEvent(USBillCreatedEvent) returns (EventPosted) {}
}

message USBillUpdatedEvent {
    string package_id = 1;
    string updated_at = 2; 
    string package_link = 3;
}

message USBillCreatedEvent {
    string package_id = 1;
    string updated_at = 2; 
    string package_link = 3;
}

message EventPosted {
    string status = 1;
}